2009-03-04  Xan Lopez  <xan@gnome.org>

Reviewed by Holger Freyther.

        https://bugs.webkit.org/show_bug.cgi?id=24358
        [GTK] Scrollbars not clipped correctly

        Use correct clip rectangle and apply coordinate translation needed
        for non-ScrollView scrollbars.

        We were ignoring the clip rectangle passed as parameter, which is
        wrong in the case of non coalesced expose events. This, in turn,
        uncovers the fact that we were not applying coordinate translation
        to our position.

        * platform/gtk/WidgetGtk.cpp:
        (WebCore::Widget::paint):

Canonical link: https://commits.webkit.org/33560@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41490 268f45cc-cd09-0410-ab3c-d52691b4dbfc